contact form alignment fix

--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -349,8 +349,9 @@ html, body {
 
 /* ////// CONTACT ////// */
 .email-inputs {
+  margin-top: 4%;
   width: 60%;
-  justify-self: center;
+  margin: 0 auto;
 }
 
 .contact {
@@ -363,7 +364,6 @@ html, body {
   border-style: dashed; */
   background-color: #141619;
   padding-bottom: 3%;
-  justify-self: center;
 }
 
 .contact-inputs, .form-inputs {
@@ -385,7 +385,7 @@ html, body {
 }
 
 .small-inputs {
-  width: 47%;
+  width: 45%;
   height: 40px;
 }
 
